--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <!-- ファイルの読み込み -->
     <link rel="stylesheet" href="css/skippr.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>skippr導入</title>
@@ -15,7 +16,9 @@
         <div style="background-image: url(img/test4.jpg)"></div>
         <div style="background-image: url(img/test5.jpg)"></div>
       </div>
-    </div>    <script src="js/jquery.min.js"></script>
+    </div>   
+    <!-- ファイルの読み込み  -->
+    <script src="js/jquery.min.js"></script>
     <script src="js/skippr.min.js"></script>
     <script src="js/script.js"></script>
   </body>
